k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - grafana.sebdevops.com
    secretName: grafana-tls
  rules:
  - host: grafana.sebdevops.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: RELEASE_NAME-grafana
            port:
              number: 80
